2007-05-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoPermissions.m: added a new void role
	"SOGoRole_None".

2007-05-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSString+Utilities.m ([NSString
	-_rangeOfURLInRange:refRange]): urls cannot end with "&" nor "=".
	There is no need to subscract the start from the length if a space
	is not found since the range has not changed either. Finally, the
	first character before the url might also be a tab or a cr, so we
	match it against the "urlAfterEndingChars" custom NSCharacterSet.
	([NSString -stringByDetectingURLs]): modified to handle email
	addresses and add a correct "mailto:" link.

2007-05-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -fetchContentObjectNames]): override
	method to return the events in the range of 2 weeks ago up to 4
	weeks from "now".

	* UI/MailPartViewers/UIxMailPartTextViewer.m
	([UIxMailPartTextViewer -flatContentAsString]): use the new
	"stringByDetectingURLs" method to offer clickable urls.

	* SoObjects/SOGo/NSString+Utilities.m ([NSString
	-stringByDetectingURLs]): this new method replaces passive URLS
	with active ones for HTML resolution of the text.

2007-05-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoDraftObject.m ([NSString
	-asQPSubjectString:encoding]): simplified method.
	The headers indicates "utf-8" again thank to our fix in
	sope-mime.

	* SoObjects/SOGo/SOGoObject.m: fail to build if libFoundation is
	being used.

2007-05-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxObjectActions.m ([UIxObjectActions
	-removeUserFromAclsAction]): implemented this method which was
	missing and is required to remove users from ACLs.

	* UI/Common/UIxFolderActions.m ([UIxFolderActions
	-subscribeAction]): folderDict was not autoreleased, resulting in
	a leak...

	* SoObjects/SOGo/AgenorUserDefaults.m ([AgenorUserDefaults