@@ -1,5 +1,9 @@
 2007-05-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* UI/Common/UIxUserRightsEditor.m ([UIxUserRightsEditor
+	-_initRights]): don't take the "None" role into account when
+	initializing the list of current roles.
+
 	* SoObjects/SOGo/SOGoPermissions.m: added a new void role
 	"SOGoRole_None".
 
